# MinecraftModpack

./: .gitignore  .packwizignore  Fabric_Modpack-2023.11.4.mrpack  README.md  checksums.json  dimensions.txt  flake.nix  index.toml  justfile  pack.toml
config/: Adorn.json5  alexscaves-general.toml  atlantis-common.toml  autotools.toml  controlify.json  distantworlds-common.toml  iceandfire-common.toml  philips-ruins-common-configs.toml  waystones-common.toml
dev/: flake.nix  update-flake-hash.sh
dev/create-modpack-release/: default.nix  pyproject.toml
dev/create-modpack-release/src/: main.py
example-server/: docker-compose.yml
generate-readme/: default.nix  pyproject.toml
generate-readme/src/: main.py
mods/: ad-astra.pw.toml  adorn.pw.toml  alexs-caves.pw.toml  alexs-mobs-extra-music.pw.toml  alexs-mobs.pw.toml  alexscaves-torpedoes.pw.toml  amethyst-equipment.pw.toml  anvilfix.pw.toml  applied-energistics-2-wireless-terminals.pw.toml  archers.pw.toml  armor-toughness-bar.pw.toml  arrp.pw.toml  artifacts.pw.toml  atlantis.pw.toml  attributefix.pw.toml  audaki-cart-engine.pw.toml  auto-elytra.pw.toml  azurelib-armor.pw.toml  balm.pw.toml  beautified-chat-client.pw.toml  beautified-chat-server.pw.toml  bed-benefits.pw.toml  bens-sharks.pw.toml  better-advancements.pw.toml  better-archeology.pw.toml  better-clouds.pw.toml  better-forests.pw.toml  better-trees.pw.toml  bewitchmentz.pw.toml  bigger-better-end-cities.pw.toml  blooming-biosphere.pw.toml  bodies-bodies.pw.toml  body-health-system.pw.toml  botania.pw.toml  botaniacombat.pw.toml  cc-tweaked.pw.toml  (+172 more)
(+23 files in other folders)
