[tool.poetry]
name = "generate-readme"
version = "0.0.1"
description = ""
authors = []
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
dacite = "^1.8.1"
mdutils = "^1.6.0"
modrinth = "^0.1.5"
curseforge = "^1.6.0"

[tool.poetry.scripts]
generate-readme = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
